tests/miz/pass/types/pass_types_set_variable_001.miz
definition
  let X be set;
  theorem
    X = X;
  proof
  end;
end;
