tests/miz/fail/soundness/fail_soundness_invalid_reflexivity_001.miz
theorem
  for X being set holds X = {};
proof
end;
